Fixed some styling issues and wrapping pages in article divs for correct styling.

--- a/themes/basic/public/css/theme.css
+++ b/themes/basic/public/css/theme.css
@@ -152,6 +152,7 @@ a:hover {
 }
 
 #articles .article .title {
+	color: #db5757;
 	margin: 0 0 8px;
 }
 
